--- a/package.json
+++ b/package.json
@@ -9,10 +9,28 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/webpack-config": "~19.0.1",
+    "@react-native-async-storage/async-storage": "^1.22.0",
+    "@react-native-community/masked-view": "^0.1.11",
+    "@react-navigation/native": "^6.1.10",
+    "@react-navigation/stack": "^6.3.21",
+    "@reduxjs/toolkit": "^2.2.1",
+    "axios": "^1.6.7",
     "expo": "~50.0.6",
     "expo-status-bar": "~1.11.1",
+    "jwt-decode": "^4.0.0",
     "react": "18.2.0",
-    "react-native": "0.73.4"
+    "react-dom": "18.2.0",
+    "react-native": "0.73.4",
+    "react-native-gesture-handler": "^2.15.0",
+    "react-native-modals": "^0.22.3",
+    "react-native-reanimated": "^3.7.0",
+    "react-native-safe-area-context": "^4.8.2",
+    "react-native-screens": "~3.29.0",
+    "react-native-swiper": "^1.6.0",
+    "react-native-web": "~0.19.6",
+    "react-redux": "^9.1.0",
+    "stripe": "^14.17.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
